# BonziBuddy-Assistant

./: .replit  README.md  assistant.py  chatGPT.py  contact.json  main.py  pyproject.toml  requirements.txt
Apps/: Code.exe.lnk  codeCompletion.py
Papers/: paper29.txt  paper80.txt  paper96.txt
Plugins/: chatGPT.py
