[tool.poetry]
name = "repl_nix_BonziBuddy-Assistant"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
pyjokes = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
